tests/ui/traits/const-traits/const-closures.stderr
error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:8:10
   |
LL |         F: [const] FnOnce() -> u8,
   |          ^^^^^^^^^ can't be applied to `FnOnce`
   |
note: `FnOnce` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:9:10
   |
LL |         F: [const] FnMut() -> u8,
   |          ^^^^^^^^^ can't be applied to `FnMut`
   |
note: `FnMut` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:10:10
   |
LL |         F: [const] Fn() -> u8,
   |          ^^^^^^^^^ can't be applied to `Fn`
   |
note: `Fn` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:8:10
   |
LL |         F: [const] FnOnce() -> u8,
   |          ^^^^^^^^^ can't be applied to `FnOnce`
   |
note: `FnOnce` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:9:10
   |
LL |         F: [const] FnMut() -> u8,
   |          ^^^^^^^^^ can't be applied to `FnMut`
   |
note: `FnMut` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:10:10
   |
LL |         F: [const] Fn() -> u8,
   |          ^^^^^^^^^ can't be applied to `Fn`
   |
note: `Fn` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:23:18
   |
LL | const fn answer<F: [const] Fn() -> u8>(f: &F) -> u8 {
   |                  ^^^^^^^^^ can't be applied to `Fn`
   |
note: `Fn` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: `[const]` can only be applied to `#[const_trait]` traits
  --> $DIR/const-closures.rs:23:18
   |
LL | const fn answer<F: [const] Fn() -> u8>(f: &F) -> u8 {
   |                  ^^^^^^^^^ can't be applied to `Fn`
   |
note: `Fn` can't be used with `[const]` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closures.rs:24:5
   |
LL |     f() + f()
   |     ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closures.rs:24:11
   |
LL |     f() + f()
   |           ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/const-closures.rs:12:5
   |
LL |     f() * 7
   |     ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0015`.
